2008-10-08  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*jcc_btdi_rex64): Clobber FLAGS_REG.
	(*jcc_btdi_mask_rex64): Ditto.
	(*jcc_btsi): Ditto.
	(*jcc_btsi_mask): Ditto.
	(*jcc_btsi_1): Ditto.
	(*jcc_btsi_mask_1): Ditto.

2008-10-08  Paul Brook  <paul@codesourcery.com>

	* config/arm/bpabi.h (ARM_FUNCTION_PROFILER): Define new EABI
	compatible profiler (__gnu_mcount_nc).
	(SUBTARGET_FRAME_POINTER_REQUIRED): Define.

2008-10-08  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.c (initial_ix86_tune_features): Add
	X86_TUNE_USE_VECTOR_FP_CONVERTS.
	* config/i386/i386.h (ix86_tune_indices): Likewise.
	(TARGET_USE_VECTOR_FP_CONVERTS): New.

	* config/i386/i386.md: Check TARGET_USE_VECTOR_FP_CONVERTS
	instead of (TARGET_USE_VECTOR_CONVERTS || TARGET_GENERIC)
	for FP to FP splitters.

2008-10-08  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.md: Add missing gen_sse2_cvtdq2p to convert
	splitter.

2008-10-08  Jakub Jelinek  <jakub@redhat.com>

	PR target/36635
	PR target/37290
	PR rtl-optimization/37341
	* cse.c (cse_cc_succs): Add ORIG_BB argument, don't follow edges
	to ORIG_BB, pass through ORIG_BB recursively.
	(cse_condition_code_reg): Adjust caller.

2008-10-08  Kai Tietz  <kai.tietz@onevision.com>

	* sdbout.c (sdbout_one_type): Treat the value type
	CONST_DECL for enumerals.

2008-10-07  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.md: Remove trailing white spaces.

2008-10-07  Kenneth Zadeck <zadeck@naturalbridge.com>

	PR rtl-optimization/37448
	* alloc-pool.c (struct alloc_pool_descriptor) [elt_size]: New field.
	(stuct alloc_pool_descriptor) [created, allocated, current, peak]:
	Make unsigned long.
	(struct output_info) [count]: Renamed total_created and made
	unsigned long.
	(struct output_info) [size]: Renamed total_allocated and made
	unsigned long.
	(create_alloc_pool, empty_alloc_pool, pool_alloc, pool_free):
	Properly keep track of desc->size.
	(print_statistics, dump_alloc_pool_statistics): Enhance the